Ajustes no projeto

--- a/Scamboo/login.html
+++ b/Scamboo/login.html
@@ -53,7 +53,7 @@
                     <!-- End # Login Form -->
                     
                     <!-- Begin | Lost Password Form -->
-                    <form id="lost-form" style="display:none;">
+                    <form id="lost-form" style="display:none;" action="#" method="post">
     	    		    <div class="modal-body">
 		    				<div id="div-lost-msg">
                                 <div id="icon-lost-msg" class="glyphicon glyphicon-chevron-right"></div>
