Enviar senha por e-mail

--- a/Scamboo/login.html
+++ b/Scamboo/login.html
@@ -40,13 +40,13 @@
                     <!-- End # Login Form -->
                     
                     <!-- Begin | Lost Password Form -->
-                    <form id="lost-form" style="display:none;" action="#" method="post">
+                    <form id="lost-form" style="display:none;" action="Validacao/resetSenha.php" method="post">
     	    		    <div class="modal-body">
 		    				<div id="div-lost-msg">
                                 <div id="icon-lost-msg" class="glyphicon glyphicon-chevron-right"></div>
                                 <span id="text-lost-msg">Digite seu e-mail.</span>
                             </div>
-		    				<input id="lost_email" class="form-control" type="text" placeholder="E-Mail" required>
+		    				<input id="email" name="email" class="form-control" type="text" placeholder="E-Mail" required>
             			</div>
 		    		    <div class="modal-footer">
                             <div>
